--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,12 @@
 # Auto detect text files and perform LF normalization
 * text=Auto
+
+# Declare files that will always have CRLF line endings on checkout.
+*.bat text eol=crlf
+
+# Declare files that will always have LF line endings on checkout.
+*.sh text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
